--- a/gtin.cabal
+++ b/gtin.cabal
@@ -18,7 +18,10 @@ library
   hs-source-dirs:      src
   exposed-modules:
       Data.Trade.GTIN
-  build-depends:       base >= 4.7 && < 5
+  build-depends:
+      base >= 4.7 && < 5
+    , binary >= 0.2
+    , hashable >= 1.0
   default-language:    Haskell2010
   ghc-options:         -Wall
                        -Wcompat
