--- a/gtin.cabal
+++ b/gtin.cabal
@@ -21,6 +21,7 @@ library
   build-depends:
       base >= 4.7 && < 5
     , binary >= 0.2
+    , ghc-prim >= 0.5
     , hashable >= 1.0
   default-language:    Haskell2010
   ghc-options:         -Wall
