--- a/gtin.cabal
+++ b/gtin.cabal
@@ -23,6 +23,7 @@ library
     , binary >= 0.2
     , ghc-prim >= 0.5
     , hashable >= 1.0
+    , validity >= 0.4.0.0
   default-language:    Haskell2010
   ghc-options:         -Wall
                        -Wcompat
